--- a/workspace/Parameters/AndroidManifest.xml
+++ b/workspace/Parameters/AndroidManifest.xml
@@ -7,8 +7,9 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -31,6 +32,10 @@
         <activity
             android:name="com.example.parameters.AddRecordActivity"
             android:label="@string/title_activity_add_record" >
+        </activity>
+        <activity
+            android:name="com.example.parameters.AddParameterValueActivity"
+            android:label="@string/title_activity_add_parameter_value" >
         </activity>
     </application>
 
