commited only manifest

--- a/workspace/Parameters/AndroidManifest.xml
+++ b/workspace/Parameters/AndroidManifest.xml
@@ -37,20 +37,18 @@
             android:name="com.example.parameters.AddParameterValueActivity"
             android:label="@string/title_activity_add_parameter_value" >
         </activity>
-        <activity
-            android:name="com.example.parameters.SettingsActivity">
+        <activity android:name="com.example.parameters.SettingsActivity" >
+        </activity>
+        <activity android:name="com.example.parameters.ManageLocation" >
+        </activity>
+        <activity android:name="com.example.parameters.ManageParameter" >
+        </activity>
+        <activity android:name="com.example.parameters.AddLocation" >
         </activity>
         <activity
-            android:name="com.example.parameters.ManageLocation">
+            android:name="com.example.parameters.CalendarActivity"
+            android:label="@string/title_activity_calendar" >
         </activity>
-        <activity
-            android:name="com.example.parameters.ManageParameter">
-        </activity>
-        <activity
-            android:name="com.example.parameters.AddLocation">
-        </activity>
-        
-        
     </application>
 
 </manifest>
