--- a/workspace/Parameters/AndroidManifest.xml
+++ b/workspace/Parameters/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.parameters.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,41 +28,52 @@
         </activity>
         <activity
             android:name="com.example.parameters.AddActivity"
-            android:label="@string/title_activity_add" >
+            android:label="@string/title_activity_add" 
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.example.parameters.AddRecordActivity"
-            android:label="@string/title_activity_add_record" >
+            android:label="@string/title_activity_add_record" 
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.example.parameters.AddParameterValueActivity"
             android:label="@string/title_activity_add_parameter_value" >
         </activity>
-        <activity android:name="com.example.parameters.SettingsActivity" >
+        <activity android:name="com.example.parameters.SettingsActivity" 
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name="com.example.parameters.ManageLocation" >
+        <activity android:name="com.example.parameters.ManageLocation" 
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name="com.example.parameters.ManageParameter" >
+        <activity android:name="com.example.parameters.ManageParameter" 
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name="com.example.parameters.AddLocation" >
+        <activity android:name="com.example.parameters.AddLocation" 
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.example.parameters.CalendarActivity"
             android:label="@string/title_activity_calendar" >
         </activity>
-        <activity android:name="com.example.parameters.EditParameterActivity" >
+        <activity android:name="com.example.parameters.EditParameterActivity" 
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name="com.example.parameters.ReportsActivity" >
+        <activity android:name="com.example.parameters.ReportsActivity" 
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name="com.example.parameters.SelectParameterActivity" >
+        <activity android:name="com.example.parameters.SelectParameterActivity" 
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name="com.example.parameters.SelectLocationActivity" >
+        <activity android:name="com.example.parameters.SelectLocationActivity" 
+            android:screenOrientation="portrait">
         </activity>
-
-                <activity android:name="com.example.parameters.GraphActivity" 
-                    android:screenOrientation="landscape">
+        <activity
+            android:name="com.example.parameters.GraphActivity"
+            android:screenOrientation="landscape" >
         </activity>
-        <activity android:name="com.example.parameters.EditLocation" >
+        <activity android:name="com.example.parameters.EditLocation" 
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
